==============
lxml changelog
==============

Under development
=================

Features added
--------------

* QName objects have new properties ``namespace`` and ``localname``.

* New options for exclusive C14N and C14N without comments.

* Instantiating a custom Element classes creates a new Element.

Bugs fixed
----------

* Internal DTD subsets that did not specify a system or public ID were
  not serialised and did not appear in the docinfo property of
  ElementTrees.

* Fix a pre-Py3k warning when parsing from a gzip file in Py2.6.

* Test suite fixes for libxml2 2.7.

* Resolver.resolve_string() did not work for non-ASCII byte strings.

* Overriding the parser encoding didn't work for many encodings.

* 0-bytes could slip through the API when used inside of Unicode
  strings.

* With ``lxml.html.clean.autolink``, links with balanced parenthesis,
  that end in a parenthesis, will be linked in their entirety (typical
  with Wikipedia links).

Other changes
-------------


2.1.2 (2008-09-05)
==================

Features added
--------------

* lxml.etree now tries to find the absolute path name of files when
  parsing from a file-like object.  This helps custom resolvers when
  resolving relative URLs, as lixbml2 can prepend them with the path
  of the source document.

Bugs fixed
----------

* Memory problem when passing documents between threads.

* Target parser did not honour the ``recover`` option and raised an
  exception instead of calling ``.close()`` on the target.

Other changes
-------------


2.0.9 (2008-09-05)
==================

Bugs fixed
----------

* Memory problem when passing documents between threads.

* Target parser did not honour the ``recover`` option and raised an
  exception instead of calling ``.close()`` on the target.


2.1.1 (2008-07-24)
==================

Features added
--------------

Bugs fixed
----------

* Crash when parsing XSLT stylesheets in a thread and using them in
  another.
